[package]
name = "jackhammer"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"
description = "Tooling for creating custom load and stress tests"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/jackhammer"
repository = "https://github.com/panicbit/jackhammer"

[dependencies]
anyhow = "1.0.32"
metrix = "0.13.8"

[dependencies.tokio]
version = "0.2.22"
features = ["full"]
