[package]
name = "jackhammer"
version = "0.3.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"
description = "Tooling for creating custom load and stress tests"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/jackhammer"
repository = "https://github.com/panicbit/jackhammer"

[dependencies]
anyhow = "1.0.38"
metrix = "0.13.12"
tokio = { version = "1.0.0", features = ["full"] }

[dev-dependencies]
termion = "1.5.5"
reqwest = "0.11.0"
structopt = "0.3.17"
